<resources>
    <string name="app_name">ecommerceapp</string>


    <!-- TODO: Auth Feature Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_lafyuu">Welcome to Lafyuu</string>
    <string name="signin_to_continue">Signin to continue</string>
    <string name="password_et_hint">Password</string>
    <string name="email">ُEmail</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With FaceBook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_account">Don’t have a account?</string>
    <string name="register">Register</string>
    <string name="loading">loading...</string>
    <string name="generic_err_msg">Error please try again later.</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="register_welcome_msg">Welcome to our app</string>
    <string name="sign_up_msg">Sign Up</string>
    <string name="name_et_hint">FUll Name</string>
    <string name="email_et_hint">Email</string>
    <string name="password_again_et_hint">COnfirm Password</string>
    <string name="have_an_account_msg">have an account?</string>
    <string name="google_signup_btn_msg">Sign up with Google</string>
    <string name="google_sign_in_field_msg">Google sign in failed, please retry again later.</string>
    <string name="facebook_signup_btn_msg">Sign up with facebook</string>
    <string name="forget_password_msg">Enter your email, to send an email to update your password.</string>
    <string name="send">Send</string>
    <string name="reset_password_msg">Reset Password</string>

    <!-- TODO: Home Features Strings -->
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <string name="search_products">Search Products</string>
    <string name="category">Category</string>
    <string name="more_categories">More Categories</string>
    <string name="select_country_msg">Please seelct your country</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="see_more">See more</string>
    <string name="mega_sale">Mega Sale</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>

</resources>